<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/material_dynamic_neutral90"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/etIncome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/income_amount"
            android:inputType="numberDecimal"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/etExpName1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/expense_food"
            android:inputType="numberDecimal"
            android:textColorHint="#455A64"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etExp1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/expense_amount"
            android:inputType="numberDecimal"
            android:textColorHint="#455A64"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/etExpName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/expense_bills"
            android:inputType="text"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/etExp2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/Expense_Amount"
            android:inputType="numberDecimal"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/etExpName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/expense_entertainment"
            android:inputType="text"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/etExp3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/Expense_Amount"
            android:inputType="numberDecimal"
            android:textColorHint="#455A64" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Expense_Other"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#616161"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:autofillHints="name"
            android:id="@+id/etExp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Expense_Other"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#616161" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:text="@string/Calculate_Balance"
            android:textSize="20sp"
            tools:ignore="VisualLintButtonSize" />

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Total_Income"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/tvExpense"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Total_Expense"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/Balance"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAnalysis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/analysis"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>